DRT-5283 Fix some alignment issues  - Bring logo into alignment with the rest of the page  - Bring the dashboard time selectors into correct alignment  - Add some padding between the logo and the alert box

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -34,6 +34,9 @@
 .navbar-default {
   background-color: @bgDefault;
   border-color: @bgHighlight;
+  border-radius: 0px;
+  border-left: 0px;
+  border-right: 0px;
   .navbar-brand {
     color: @colDefault;
     &:hover, &:focus {
@@ -91,6 +94,18 @@
   }
 }
 
+.navbar-nav li.red .fa-bar-chart {
+    color: #f55;
+}
+
+.navbar-nav li.amber .fa-bar-chart  {
+    color: #F7901E;
+}
+
+.navbar-nav li.green .fa-bar-chart  {
+    color: #008000;
+}
+
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu {
     > li > a {
@@ -113,12 +128,10 @@
 .main-logo {
   height: 70px;
   width: 220px;
-  padding: 15px;
-  margin: auto;
   float:left;
   background-image: url(/v2/stn/live/assets/images/logo_colour.png);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 0px 15px;
 }
 
 .popover.flights-popover .popover__content > tr td {
@@ -1633,27 +1646,16 @@ a i.fa.fa-remove {
   vertical-align: middle;
 }
 
-.navbar-nav li.red .fa-bar-chart {
-    color: #f55;
-}
-
-.navbar-nav li.amber .fa-bar-chart  {
-    color: #F7901E;
-}
-
-.navbar-nav li.green .fa-bar-chart  {
-    color: #008000;
-}
-
 .key-cloak-users td {
   padding: 10px;
 }
 
 .topbar {
-  width: 100%;
+  height: 70px;
+  width: 96%;
   overflow: hidden;
-  margin-left: auto;
-  padding-left: 25px;
+  margin: auto;
+  padding-left: 15px;
   box-sizing: border-box;
   display: block;
 }
